It's all written, but there's some linker errors still

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,5 +14,12 @@
       ],
       "useWSL": true
     },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Hack Output",
+      "program": "${workspaceFolder}\\scripts\\hackOutput.js",
+      "useWSL": true
+    },
   ]
 }
