--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "name": "Launch Program",
       "program": "${workspaceFolder}\\dist\\test.js",
       "outFiles": [
-        "${workspaceFolder}/**/*.js"
+        "${workspaceFolder}/**/*"
       ],
       "useWSL": true
     },
@@ -19,6 +19,13 @@
       "request": "launch",
       "name": "Hack Output",
       "program": "${workspaceFolder}\\scripts\\hackOutput.js",
+      "useWSL": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Build",
+      "program": "${workspaceFolder}\\scripts\\build.js",
       "useWSL": true
     },
   ]
