Finally got something working

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
       "program": "${workspaceFolder}\\dist\\test.js",
       "outFiles": [
         "${workspaceFolder}/**/*"
-      ]
+      ],
+      "useWSL": true
     },
     {
       "type": "node",
