--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^11.11.3",
     "@types/webassembly-js-api": "0.0.2",
+    "clone-deep": "^4.0.1",
     "strict-event-emitter-types": "^2.0.0",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
