--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rvl-node",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A Node.js implementation of the RVL* library family based on Web Assembly",
   "main": "dist/index.js",
   "types": "declarations/index.d.ts",
@@ -30,9 +30,10 @@
     "@types/node": "^11.11.3",
     "@types/webassembly-js-api": "0.0.2",
     "clone-deep": "^4.0.1",
-    "strict-event-emitter-types": "^2.0.0",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
   },
-  "dependencies": {}
+  "dependencies": {
+    "strict-event-emitter-types": "^2.0.0"
+  }
 }
