--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,34 +11,8 @@
       "program": "${workspaceFolder}\\dist\\test.js",
       "outFiles": [
         "${workspaceFolder}/**/*"
-      ]
-    },
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Debug Remotely",
-      "address": "192.168.1.184",
-      "port": 9229,
-      "localRoot": "${workspaceRoot}",
-      "remoteRoot": "/home/pi/RVL-Node",
-      "sourceMaps": true,
-      "outFiles": [
-        "${workspaceFolder}/**/*"
-      ]
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Hack Output",
-      "program": "${workspaceFolder}\\scripts\\hackOutput.js",
-      "useWSL": true
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Build",
-      "program": "${workspaceFolder}\\scripts\\build.js",
-      "useWSL": true
-    },
+      ],
+      "outputCapture": "std"
+    }
   ]
 }
