Scaffolded new codebase

--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "rvl-node",
   "version": "6.3.1",
   "description": "A Node.js implementation of the RVL* library family based on Web Assembly",
-  "main": "dist/index.js",
-  "types": "declarations/index.d.ts",
-  "directories": {
-    "example": "example"
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint-ts": "tslint src/**/*.ts",
-    "build-ts": "tsc",
-    "lint-cpp": "cpplint --quiet --linelength=120 --recursive --repository=src src/*",
-    "build-cpp": "node scripts/build.js",
-    "build": "npm run build-cpp && npm run build-ts",
-    "postbuild": "node scripts/wave.js"
+    "build": "tsc",
+    "lint": "eslint --report-unused-disable-directives \"**/*.{ts,tsx,mts,js,jsx,mjs}\""
   },
   "repository": {
     "type": "git",
@@ -27,12 +25,18 @@
   },
   "homepage": "https://github.com/rvl-system/rvl-node#readme",
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "clone-deep": "^4.0.1",
-    "tslint": "^6.1.2",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "strict-event-emitter-types": "^2.0.0"
+    "@eslint/compat": "^1.4.1",
+    "@eslint/js": "^9.39.1",
+    "cross-dirname": "^0.1.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-fast-import": "^1.5.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^16.5.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3"
   }
 }
