--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.4.1",
     "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
     "cross-dirname": "^0.1.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
